最后增加修炼了栏目的功能.

--- a/mysite/templates/registration/password_reset_email.html
+++ b/mysite/templates/registration/password_reset_email.html
@@ -1,14 +1,13 @@
-{% load i18n %}{% autoescape off %}
-{% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
+<p>You're receiving this email because you requested a password reset for your user account at {{ site_name }}.</p>
 
-{% trans "Please go to the following page and choose a new password:" %}
-{% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-{% endblock %}
-{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
+<p> trans "Please go to the following page and choose a new password:"</p>
 
-{% trans "Thanks for using our site!" %}
+{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+<p>{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}</p>
 
-{% endautoescape %}
+<p>"Thanks for using our site!" </p>
+
+<p> Thanks for using our site</p>
+
+<p>The itdiffer.com team</p>
