--- a/mysite/templates/header.html
+++ b/mysite/templates/header.html
@@ -13,9 +13,10 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                <li><a href="#"> {{ user.username}}</a></li>
+                <li><a href="{% url 'account:my_information' %}"> {{ user.username}}</a></li>
                 <!--这个名字为url起的名字-->
                 <li><a href="{% url 'account:user_logout' %}">Logout</a></li>
+                <li><a href="{% url 'account:my_information_edit' %}">个人信息</a></li>
                 {% else %}
                 
                 <li><a href="{% url 'account:user_login' %}">Login</a></li>
