--- a/mysite/templates/registration/password_reset_confirm.html
+++ b/mysite/templates/registration/password_reset_confirm.html
@@ -1,33 +1,31 @@
-{% extends "admin/base_site.html" %}
-{% load i18n %}
+{% extends "base.html" %}
+{% load staticfiles %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Password reset confirmation' %}
-</div>
-{% endblock %}
+{% block title %}password reset{% endblock %}
 
-{% block title %}{{ title }}{% endblock %}
-{% block content_title %}<h1>{{ title }}</h1>{% endblock %}
 {% block content %}
 
-{% if validlink %}
+<div class="row text-center vertical-middle-sm">
 
-<p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
+    <h1>Reset your password</h1>
+<p>  "Please enter your new password twice so we can verify you typed it in correctly."</p>
 
-<form method="post">{% csrf_token %}
-{{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
-{{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
+<form method="post" class="form-horizontal">{% csrf_token %}
+        <div class="form-group">
+            <label for="" class="col-md-5 control-label text-right">new Password</label>
+            <div class="col-md-6">{{form.new_password1}}</div>
+        </div>
+
+        <div class="form-group">
+            <label for="" class="col-md-5 control-label text-right">confirm password</label>
+            <div class="col-md-6">{{form.new_password2}}</div>
+        </div>
+
+<p><input type="submit" value="change my password" class="btn btn-primary">
+</p>
 </form>
 
-{% else %}
+</div>
 
-<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
-
-{% endif %}
 
 {% endblock %}
